--- a/Software/Go/softplc-main/softplc-main/graph_marcelin_Application.json
+++ b/Software/Go/softplc-main/softplc-main/graph_marcelin_Application.json
@@ -82,51 +82,6 @@
       "type": "step"
     },
     {
-      "id": "reactflow__edge-7Output-31method",
-      "selected": false,
-      "source": "7",
-      "sourceHandle": "Output",
-      "target": "31",
-      "targetHandle": "method",
-      "type": "step"
-    },
-    {
-      "id": "reactflow__edge-4Output-31url path",
-      "selected": false,
-      "source": "4",
-      "sourceHandle": "Output",
-      "target": "31",
-      "targetHandle": "url path",
-      "type": "step"
-    },
-    {
-      "id": "reactflow__edge-18Output-31xSend",
-      "selected": false,
-      "source": "18",
-      "sourceHandle": "Output",
-      "target": "31",
-      "targetHandle": "xSend",
-      "type": "step"
-    },
-    {
-      "id": "reactflow__edge-31xDone-10Input",
-      "selected": false,
-      "source": "31",
-      "sourceHandle": "xDone",
-      "target": "10",
-      "targetHandle": "Input",
-      "type": "step"
-    },
-    {
-      "id": "reactflow__edge-31response-9Input",
-      "selected": false,
-      "source": "31",
-      "sourceHandle": "response",
-      "target": "9",
-      "targetHandle": "Input",
-      "type": "step"
-    },
-    {
       "id": "reactflow__edge-36Output-37Input",
       "selected": false,
       "source": "36",
@@ -433,42 +388,6 @@
       "type": "step"
     },
     {
-      "id": "83",
-      "selected": false,
-      "source": "65",
-      "sourceHandle": "Output",
-      "target": "73",
-      "targetHandle": "method",
-      "type": "step"
-    },
-    {
-      "id": "85",
-      "selected": false,
-      "source": "69",
-      "sourceHandle": "Output",
-      "target": "73",
-      "targetHandle": "xSend",
-      "type": "step"
-    },
-    {
-      "id": "86",
-      "selected": false,
-      "source": "73",
-      "sourceHandle": "xDone",
-      "target": "67",
-      "targetHandle": "Input",
-      "type": "step"
-    },
-    {
-      "id": "87",
-      "selected": false,
-      "source": "73",
-      "sourceHandle": "response",
-      "target": "66",
-      "targetHandle": "Input",
-      "type": "step"
-    },
-    {
       "id": "reactflow__edge-75Output-79Input",
       "selected": false,
       "source": "75",
@@ -611,18 +530,6 @@
       "type": "step"
     },
     {
-      "id": "reactflow__edge-82str-73url path",
-      "source": "82",
-      "sourceHandle": "str",
-      "style": {
-        "stroke": "#30362F",
-        "strokeWidth": 1
-      },
-      "target": "73",
-      "targetHandle": "url path",
-      "type": "step"
-    },
-    {
       "id": "reactflow__edge-82str-102Input",
       "source": "82",
       "sourceHandle": "str",
@@ -729,6 +636,126 @@
       },
       "target": "104",
       "targetHandle": "pass",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-82str-106url path",
+      "source": "82",
+      "sourceHandle": "str",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "106",
+      "targetHandle": "url path",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-65Output-106method",
+      "source": "65",
+      "sourceHandle": "Output",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "106",
+      "targetHandle": "method",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-69Output-106xSend",
+      "source": "69",
+      "sourceHandle": "Output",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "106",
+      "targetHandle": "xSend",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-106xDone-67Input",
+      "source": "106",
+      "sourceHandle": "xDone",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "67",
+      "targetHandle": "Input",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-106response-66Input",
+      "source": "106",
+      "sourceHandle": "response",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "66",
+      "targetHandle": "Input",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-18Output-108xSend",
+      "source": "18",
+      "sourceHandle": "Output",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "108",
+      "targetHandle": "xSend",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-4Output-108url path",
+      "source": "4",
+      "sourceHandle": "Output",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "108",
+      "targetHandle": "url path",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-7Output-108method",
+      "source": "7",
+      "sourceHandle": "Output",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "108",
+      "targetHandle": "method",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-108xDone-10Input",
+      "source": "108",
+      "sourceHandle": "xDone",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "10",
+      "targetHandle": "Input",
+      "type": "step"
+    },
+    {
+      "id": "reactflow__edge-108response-9Input",
+      "source": "108",
+      "sourceHandle": "response",
+      "style": {
+        "stroke": "#b1b1b7",
+        "strokeWidth": 1
+      },
+      "target": "9",
+      "targetHandle": "Input",
       "type": "step"
     }
   ],
@@ -949,12 +976,12 @@
       "height": 81,
       "id": "9",
       "position": {
-        "x": 1456.5006055755096,
-        "y": 107.01719136834168
+        "x": 1453.4162640955412,
+        "y": 97.7641669284371
       },
       "positionAbsolute": {
-        "x": 1456.5006055755096,
-        "y": 107.01719136834168
+        "x": 1453.4162640955412,
+        "y": 97.7641669284371
       },
       "selected": false,
       "type": "outputNode",
@@ -1003,12 +1030,12 @@
       "height": 81,
       "id": "10",
       "position": {
-        "x": 1465.392497088138,
-        "y": -27.275743117605998
+        "x": 1449.618989359964,
+        "y": -58.82275857395416
       },
       "positionAbsolute": {
-        "x": 1465.392497088138,
-        "y": -27.275743117605998
+        "x": 1449.618989359964,
+        "y": -58.82275857395416
       },
       "selected": false,
       "type": "outputNode",
@@ -1321,83 +1348,6 @@
       "selected": false,
       "type": "outputNode",
       "width": 221
-    },
-    {
-      "data": {
-        "accordion": "Communication",
-        "display": "HTTP Node",
-        "id": "31",
-        "inputHandle": [
-          {
-            "dataType": "bool",
-            "name": "xSend"
-          },
-          {
-            "dataType": "value",
-            "name": "url path"
-          },
-          {
-            "dataType": "value",
-            "name": "method"
-          },
-          {
-            "dataType": "value",
-            "name": "body"
-          }
-        ],
-        "label": "HTTP",
-        "outputHandle": [
-          {
-            "dataType": "bool",
-            "name": "xDone"
-          },
-          {
-            "dataType": "value",
-            "name": "response"
-          }
-        ],
-        "parameterNameData": [
-          "url",
-          "user",
-          "password",
-          "header Key 1",
-          "header Value 1",
-          "header Key 2",
-          "header Value 2"
-        ],
-        "parameterValueData": [
-          "http://192.168.37.58/",
-          "",
-          "",
-          "",
-          "",
-          "",
-          ""
-        ],
-        "primaryType": "LogicalNode",
-        "selectedFriendlyNameData": "default",
-        "selectedServiceData": "default",
-        "selectedSubServiceData": "default",
-        "services": [],
-        "stretchable": false,
-        "subServices": [],
-        "type": "ConfigurableNodeHttp",
-        "valueData": ""
-      },
-      "dragging": false,
-      "height": 421,
-      "id": "31",
-      "position": {
-        "x": 1144.0044963672308,
-        "y": -46.80433376878568
-      },
-      "positionAbsolute": {
-        "x": 1144.0044963672308,
-        "y": -46.80433376878568
-      },
-      "selected": false,
-      "type": "LogicalNode",
-      "width": 246
     },
     {
       "data": {
@@ -1884,7 +1834,7 @@
         "x": 389.8509978864338,
         "y": 1451.6633762655285
       },
-      "selected": true,
+      "selected": false,
       "type": "outputNode",
       "width": 221
     },
@@ -1910,7 +1860,6 @@
         "parameterValueData": [
           "",
           "true",
-          "",
           ""
         ],
         "primaryType": "LogicalNode",
@@ -1924,7 +1873,7 @@
         "valueData": ""
       },
       "dragging": false,
-      "height": 225,
+      "height": 221,
       "id": "47",
       "position": {
         "x": 674.7429774077502,
@@ -1936,7 +1885,7 @@
       },
       "selected": false,
       "type": "LogicalNode",
-      "width": 250
+      "width": 246
     },
     {
       "data": {
@@ -3142,84 +3091,6 @@
     },
     {
       "data": {
-        "accordion": "Communication",
-        "display": "HTTP Node",
-        "id": "31",
-        "inputHandle": [
-          {
-            "dataType": "bool",
-            "name": "xSend"
-          },
-          {
-            "dataType": "value",
-            "name": "url path"
-          },
-          {
-            "dataType": "value",
-            "name": "method"
-          },
-          {
-            "dataType": "value",
-            "name": "body"
-          }
-        ],
-        "label": "HTTP",
-        "outputHandle": [
-          {
-            "dataType": "bool",
-            "name": "xDone"
-          },
-          {
-            "dataType": "value",
-            "name": "response"
-          }
-        ],
-        "parameterNameData": [
-          "url",
-          "user",
-          "password",
-          "header Key 1",
-          "header Value 1",
-          "header Key 2",
-          "header Value 2"
-        ],
-        "parameterValueData": [
-          "http://192.168.39.223/color/0?",
-          "",
-          "",
-          "",
-          "",
-          "",
-          ""
-        ],
-        "primaryType": "LogicalNode",
-        "selectedFriendlyNameData": "default",
-        "selectedServiceData": "default",
-        "selectedSubServiceData": "default",
-        "services": [],
-        "stretchable": false,
-        "subServices": [],
-        "type": "ConfigurableNodeHttp",
-        "valueData": ""
-      },
-      "draggable": true,
-      "dragging": false,
-      "height": 421,
-      "id": "73",
-      "position": {
-        "x": 2811.683695585981,
-        "y": 591.1956662312143
-      },
-      "positionAbsolute": {
-        "x": 2811.683695585981,
-        "y": 591.1956662312143
-      },
-      "selected": false,
-      "type": "LogicalNode",
-      "width": 246
-    },
-    {
-      "data": {
         "accordion": "View web",
         "dataType": "",
         "display": "Input bool",
@@ -4135,11 +4006,165 @@
       "selected": false,
       "type": "LogicalNode",
       "width": 101
+    },
+    {
+      "data": {
+        "accordion": "Communication",
+        "display": "HTTP Node",
+        "id": "106",
+        "inputHandle": [
+          {
+            "dataType": "bool",
+            "name": "xSend"
+          },
+          {
+            "dataType": "value",
+            "name": "url path"
+          },
+          {
+            "dataType": "value",
+            "name": "method"
+          },
+          {
+            "dataType": "value",
+            "name": "body"
+          }
+        ],
+        "label": "HTTP Client",
+        "outputHandle": [
+          {
+            "dataType": "bool",
+            "name": "xDone"
+          },
+          {
+            "dataType": "value",
+            "name": "response"
+          }
+        ],
+        "parameterNameData": [
+          "url",
+          "user",
+          "password",
+          "header Key 1",
+          "header Value 1",
+          "header Key 2",
+          "header Value 2"
+        ],
+        "parameterValueData": [
+          "http://192.168.39.223/color/0?",
+          "",
+          "",
+          "",
+          "",
+          "",
+          ""
+        ],
+        "primaryType": "LogicalNode",
+        "selectedFriendlyNameData": "default",
+        "selectedServiceData": "default",
+        "selectedSubServiceData": "default",
+        "services": [],
+        "stretchable": false,
+        "subServices": [],
+        "type": "ConfigurableNodeHttp",
+        "valueData": ""
+      },
+      "dragging": false,
+      "height": 425,
+      "id": "106",
+      "position": {
+        "x": 2830.8972705024426,
+        "y": 558.5719431425381
+      },
+      "positionAbsolute": {
+        "x": 2830.8972705024426,
+        "y": 558.5719431425381
+      },
+      "selected": false,
+      "type": "LogicalNode",
+      "width": 250
+    },
+    {
+      "data": {
+        "accordion": "Communication",
+        "display": "HTTP Node",
+        "id": "108",
+        "inputHandle": [
+          {
+            "dataType": "bool",
+            "name": "xSend"
+          },
+          {
+            "dataType": "value",
+            "name": "url path"
+          },
+          {
+            "dataType": "value",
+            "name": "method"
+          },
+          {
+            "dataType": "value",
+            "name": "body"
+          }
+        ],
+        "label": "HTTP Client",
+        "outputHandle": [
+          {
+            "dataType": "bool",
+            "name": "xDone"
+          },
+          {
+            "dataType": "value",
+            "name": "response"
+          }
+        ],
+        "parameterNameData": [
+          "url",
+          "user",
+          "password",
+          "header Key 1",
+          "header Value 1",
+          "header Key 2",
+          "header Value 2"
+        ],
+        "parameterValueData": [
+          "http://192.168.37.58/",
+          "",
+          "",
+          "",
+          "",
+          "",
+          ""
+        ],
+        "primaryType": "LogicalNode",
+        "selectedFriendlyNameData": "default",
+        "selectedServiceData": "default",
+        "selectedSubServiceData": "default",
+        "services": [],
+        "stretchable": false,
+        "subServices": [],
+        "type": "ConfigurableNodeHttp",
+        "valueData": ""
+      },
+      "dragging": false,
+      "height": 425,
+      "id": "108",
+      "position": {
+        "x": 1159.4490882785938,
+        "y": -141.6282266001844
+      },
+      "positionAbsolute": {
+        "x": 1159.4490882785938,
+        "y": -141.6282266001844
+      },
+      "selected": false,
+      "type": "LogicalNode",
+      "width": 250
     }
   ],
   "viewport": {
-    "x": 605.5050128458889,
-    "y": -668.022824943235,
-    "zoom": 0.6973718331752028
+    "x": -317.2316244001818,
+    "y": 146.50272458953737,
+    "zoom": 0.5
   }
 }
