--- a/Software/Web/softplcui-main/softplcui-main/package.json
+++ b/Software/Web/softplcui-main/softplcui-main/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@xyflow/react": "^12.8.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
